--- a/aud/it_aud9_mvc/it_aud9_mvc/it_aud9_mvc.csproj
+++ b/aud/it_aud9_mvc/it_aud9_mvc/it_aud9_mvc.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\MovieClient.cs" />
+    <Compile Include="Models\MoviesDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
