--- a/labs/it_lab4_mvc/it_lab4_mvc/it_lab4_mvc.csproj
+++ b/labs/it_lab4_mvc/it_lab4_mvc/it_lab4_mvc.csproj
@@ -496,6 +496,7 @@
     <Content Include="Views\Friends\Details.cshtml" />
     <Content Include="Views\Friends\Edit.cshtml" />
     <Content Include="Views\Friends\Index.cshtml" />
+    <Content Include="Views\Account\AddUserToRole.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
